--- a/New Chess/AndroidManifest.xml
+++ b/New Chess/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="kobi.chess"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/king_white" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
