--- a/New Chess/AndroidManifest.xml
+++ b/New Chess/AndroidManifest.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="kobi.chess"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionName="1.1" android:versionCode="2">
     <application android:icon="@drawable/king_white" android:label="@string/app_name">
         <activity android:name=".MainActivity"
                   android:label="@string/app_name"
